这是第十二周的项目作业

--- a/code/ch11/弹出蒙层.html
+++ b/code/ch11/弹出蒙层.html
@@ -194,7 +194,18 @@
     <!-- 蒙层 -->
     <div class="model">
         <div class="content">
-            <span id="close">X</span>
+            <div class="top">
+                <span class="left">确定付款</span>
+                <span id="close">X</span>
+            </div>
+            <div class="center">
+                <span><img src="/trunk/img/感叹号.png" alt=""></span>
+                <span class="text">确定提交订单</span>
+            </div>
+            <div class="bottom">
+                <button class="cancel">取消</button>
+                <button class="certain">确定</button>
+            </div>
         </div>
     </div>
 
